# public/swagger.json
@@ -58,10 +58,14 @@
 				"properties": {
 					"originalUrl": {
 						"type": "string"
+					},
+					"shortUrl": {
+						"type": "string"
 					}
 				},
 				"required": [
-					"originalUrl"
+					"originalUrl",
+					"shortUrl"
 				],
 				"type": "object",
 				"additionalProperties": false
